# phrasal_verb_finder

./: CMakeLists.txt  README.txt  compile_commands.json  main.cpp  test_file.txt
cxxopts/: CMakeLists.txt
logger/: CMakeLists.txt
logger/inc/: logger.h
logger/src/: logger.cpp
phrasal_engine/: CMakeLists.txt
phrasal_engine/inc/: hash_dictionary.h  phrasal_engine.h  phrase_pattern.h  phrase_types.h
phrasal_engine/src/: hash_dictionary.cpp  phrasal_engine.cpp  phrase_pattern.cpp
res/: dict_db.txt
